:alien: Styling fyloLandingPage's scrollBar and correcting responsiveness

--- a/fylo-landing-page/styles.css
+++ b/fylo-landing-page/styles.css
@@ -27,6 +27,19 @@ html, body {
   height: 100%;
 }
 
+/* Scrollbar */
+*::-webkit-scrollbar {
+  width: 15px;
+  background: #2B3244;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #181F2B;
+  background-clip: padding-box;
+  border: 4px transparent solid;
+}
+
 /* Header */
 
 header {
@@ -431,50 +444,62 @@ footer {
     display: flex;
     flex-direction: column;
   }
+
   .feature {
     width: 100%;
   }
+
   .feature img {
     width: 20%;
   }
+
   .feature h2 {
     font-size: 2rem;
   }
+
   .feature p {
     width: 40%;
     font-size: 1.2rem;
     margin-bottom: 0;
   }
+
   .documentation {
     gap: 0;
     width: 80%;
     flex-direction: column;
   }
+
   .documentation img {
     width: 60%;
     margin-bottom: 5rem;
   }
+
   .instructions {
     width: 60%;
   }
+
   .assessments {
     gap: 3rem;
     width: 70%;
     flex-direction: column;
   }
+
   .assessment {
     width: 75%;
     height: auto;
     column-gap: 1rem;
   }
+
   .quotes {
     top: -6%;
     left: 11%;
     position: absolute;
   }
+
   .options {
     column-gap: 0.5rem;
   }
+
   .social-media {
     width: 100%;
   }
@@ -484,47 +509,59 @@ footer {
   .intro>img {
     width: 80%;
   }
+
   .intro>h1 {
     width: 80%;
   }
+
   .intro p {
     width: 60%;
   }
+
   .access {
     width: 80%;
   }
+
   .feature img {
-    width: 10%;
+    width: 15%;
   }
+
   .get-started {
     width: 75%;
     padding: 5%;
     height: auto;
     justify-content: center;
   }
+
   .get-started p {
     width: 100%;
   }
+
   .email-input {
     width: 100%;
     flex-direction: column;
     justify-content: center;
   }
+
   #email {
     width: 100%;
     margin-bottom: 1rem;
   }
+
   #email:invalid+span {
     display: none;
   }
+
   .email-input>.btn-get-started {
     width: 100%;
   }
+
   .quotes {
     top: -6%;
     left: 11%;
     position: absolute;
   }
+
   footer {
     gap: 2rem;
     height: auto;
@@ -533,12 +570,15 @@ footer {
     flex-direction: column;
     padding: 10rem 20% 5rem;
   }
+
   .company {
     width: 100%;
   }
+
   .contacts {
     padding: 0;
   }
+
   .options {
     gap: 1rem;
     margin-top: 0;
@@ -546,74 +586,95 @@ footer {
     align-items: start;
     flex-direction: column;
   }
+
   .social-media {
     gap: 2rem;
     width: auto;
     padding-top: 0;
     align-self: center;
   }
+
   @media(max-width: 539px) {
     * {
       font-size: 10px;
     }
+
     header {
       padding: 2rem;
     }
+
     header>img {
       width: 90px;
     }
+
     header>div {
       column-gap: 2rem;
     }
+
     .feature h2 {
       font-size: 1.5rem;
     }
+
     .feature p {
       width: 80%;
       font-size: 1.2rem;
       margin-bottom: 0;
     }
+
     .intro h1 {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
     }
+
     .intro>.btn-get-started {
       margin-bottom: 7rem;
     }
+
     .instructions {
       width: 100%;
     }
+
     .instructions>h2 {
       font-size: 1.5rem;
       width: auto;
       text-align: center;
     }
+
     .instructions p {
       margin-bottom: 1rem;
     }
+
     .assessments {
       margin-bottom: 0;
     }
+
     .assessment {
       width: 100%;
     }
+
     .quotes {
       top: -6%;
       left: -13px;
     }
+
     .access {
       width: 100%;
     }
+
     .get-started {
       width: 80%;
     }
+
     .get-started h2 {
       font-size: 1.5rem;
     }
+
     .documentation>img {
       width: 100%;
     }
+
     footer {
+      gap: 4rem;
       padding: 15rem 10% 5rem;
     }
   }
